<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/cameraFragment">

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.rahul.aquavision.ui.camera.CameraFragment"
        android:label="@string/camera" />

    <fragment
        android:id="@+id/freshnessFragment"
        android:name="com.rahul.aquavision.ui.FreshnessFragment"
        android:label="@string/check_freshness" />

    <fragment
        android:id="@+id/volumeFragment"
        android:name="com.rahul.aquavision.ui.volume.VolumeFragment"
        android:label="@string/volume" />

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.rahul.aquavision.ui.AnalyticsFragment"
        android:label="@string/analytics"
        tools:layout="@layout/fragment_analytics">
        <action
            android:id="@+id/action_analytics_to_detail"
            app:destination="@id/historyDetailFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/moreFragment"
        android:name="com.rahul.aquavision.ui.MoreFragment"
        android:label="@string/more" />

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.rahul.aquavision.ui.chat.ChatFragment"
        android:label="@string/ai_chat" />

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.rahul.aquavision.ui.MapFragment"
        android:label="@string/map" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.rahul.aquavision.ui.history.HistoryFragment"
        android:label="@string/history">
        <action
            android:id="@+id/action_history_to_detail"
            app:destination="@id/historyDetailFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/historyDetailFragment"
        android:name="com.rahul.aquavision.ui.history.HistoryDetailFragment"
        android:label="@string/detection_detail">
        <argument android:name="imagePath" app:argType="string" />
        <argument android:name="timestamp" app:argType="long" />
        <argument android:name="fishCount" app:argType="string" />
        <argument android:name="details" app:argType="string" />
        <argument android:name="lat" app:argType="float" android:defaultValue="0.0" />
        <argument android:name="lng" app:argType="float" android:defaultValue="0.0" />

        <argument
            android:name="placeName"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/languageFragment"
        android:name="com.rahul.aquavision.ui.onboarding.LanguageFragment"
        android:label="@string/select_language"
        tools:layout="@layout/fragment_language">
        <action
            android:id="@+id/action_language_to_profile"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.rahul.aquavision.ui.profile.ProfileFragment"
        android:label="@string/profile">
        <argument
            android:name="isOnboarding"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/fishingZoneFragment"
        android:name="com.rahul.aquavision.ui.fishing.FishingZoneFragment"
        android:label="@string/fishing_zones" />

    <fragment
        android:id="@+id/oceanDataFragment"
        android:name="com.rahul.aquavision.ui.ocean.OceanDataFragment"
        android:label="@string/ocean_data">

        <action
            android:id="@+id/action_oceanData_to_map"
            app:destination="@id/oceanDataMapFragment" />
    </fragment>

    <fragment
        android:id="@+id/oceanDataMapFragment"
        android:name="com.rahul.aquavision.ui.ocean.OceanDataMapFragment"
        android:label="@string/ocean_data">

        <argument
            android:name="layerId"
            app:argType="string"
            android:defaultValue="pfz" />
    </fragment>

    <fragment
        android:id="@+id/geoFenceFragment"
        android:name="com.rahul.aquavision.geofence.GeoFenceFragment"
        android:label="Geo-Fence Protection" />

</navigation>